fix : Search Icon Visibility  Updated on Lower ScreenSize Devices

--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -52,6 +52,8 @@
     .header-search {
         cursor: pointer;
         display: block;
+        margin-right: 0px;
+        margin-left: 0px;
     }
 
     .hero-content {
